<resources>
    <string name="app_name">Skins Of Minecraft</string>
    <string name="admob_app_id">ca-app-pub-5580537606944457~7101494428</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_polity">PRIVACY POLICY</string>
    <string name="project_id_new">moliya-data</string>
    <string name="rate_app">RATE APPS</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="save_massage">SKIN SAVED IN GALLERY</string>
    <string name="search_menu_title">Search</string>
    <string name="share_app">SHARE APP</string>
    <string name="size">Size</string>
    <string name="skin_loading_error">Error at skin loading</string>
    <string name="skin_name_formatted">#SKIN_%s</string>
    <string name="skins">SKINS</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="view_text">000</string>
    <string name="views">Views</string>
    <string name="home">HOME</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="install">INSTALL</string>
    <string name="installed_massage">SKIN SAVED TO MINECRAFT PE</string>
    <string name="item_view_role_description">Tab</string>
    <string name="latest">LATEST</string>
    <string name="loading">Loading ..</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="more_app">MORE APP</string>
    <string name="remove_ads">REMOVE ADS</string>
    <string name="most_downloads">MOST_DOWNLOADS</string>
    <string name="most_views">MOST VIEWS</string>
    <string name="favourite">FAVOURITE</string>
    <string name="downloads">Downloads</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="ads_massage">VIEW AD TO GET COOL SKIN?</string>

</resources>