<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/screen_background" android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/toolbar_header" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/toolbar_container" android:background="@color/v2_colorPrimary" android:layout_width="match_parent" android:layout_height="@dimen/toolbar_height">
            <ImageView android:id="@+id/toolbar_back" android:layout_width="46dp" android:layout_height="27dp" android:layout_marginLeft="12dp" android:src="@drawable/toolbar_back" android:layout_centerVertical="true"/>
            <ImageView android:layout_width="62dp" android:layout_height="24dp" android:layout_marginLeft="24dp" android:src="@drawable/toolbar_back_text" android:layout_toRightOf="@+id/toolbar_back" android:layout_centerVertical="true"/>
            <ImageView android:id="@+id/toolbar_rate" android:layout_width="32dp" android:layout_height="32dp" android:layout_marginRight="12dp" android:src="@drawable/rate" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View android:background="@color/black" android:layout_width="match_parent" android:layout_height="4dp" android:layout_below="@+id/toolbar_container"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_header"
        >

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" >
        <com.girlsskinsminecraft.boyskinsminecraft.customview.GridRelativeLayout
            android:id="@+id/preview_container" android:layout_width="match_parent" android:layout_height="@dimen/skin_container_height">
            <ImageView android:id="@+id/skin_container" android:layout_width="250dp" android:layout_height="185dp" android:layout_marginTop="32dp" android:layout_centerHorizontal="true"/>
        </com.girlsskinsminecraft.boyskinsminecraft.customview.GridRelativeLayout>
        <RelativeLayout android:id="@+id/skin_name_container" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/preview_container">
            <View android:id="@+id/divider_1" android:background="@color/divider_color" android:layout_width="match_parent" android:layout_height="2dp"/>
            <TextView android:textSize="18sp" android:textColor="@color/primaryTextColor" android:id="@+id/skin_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="14dp" android:layout_below="@+id/divider_1"/>
            <View android:id="@+id/divider_2" android:background="@color/divider_color" android:layout_width="match_parent" android:layout_height="2dp" android:layout_below="@+id/skin_name"/>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/skin_buttons_container_margin_top" android:layout_marginRight="18dp" android:layout_alignParentRight="true">
            <ImageView android:id="@+id/skin_button_3d" android:layout_width="@dimen/skin_round_button_size" android:layout_height="@dimen/skin_round_button_size" android:src="@drawable/skin_button_3d"/>
            <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
            <ImageView android:id="@+id/skin_button_favorite" android:layout_width="@dimen/skin_round_button_size" android:layout_height="@dimen/skin_round_button_size" android:src="@drawable/skin_button_favorite_on"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/info_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_below="@+id/skin_name_container">
            <RelativeLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="@dimen/skin_info_text_size" android:textColor="@color/skin_views_color" android:id="@+id/skin_views_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true"/>
                <TextView android:textSize="@dimen/skin_info_secondary_text_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/views" android:layout_below="@+id/skin_views_count" android:layout_centerHorizontal="true" android:fontFamily="Roboto-Regular.ttf"/>
            </RelativeLayout>
            <View android:background="@color/horizontal_divider_color" android:layout_width="2dp" android:layout_height="@dimen/horizontal_divider_height"/>
            <RelativeLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="@dimen/skin_info_text_size" android:textColor="@color/skin_downloads_color" android:id="@+id/skin_downloads_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true"/>
                <TextView android:textSize="@dimen/skin_info_secondary_text_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/downloads" android:layout_below="@+id/skin_downloads_count" android:layout_centerHorizontal="true" android:fontFamily="Roboto-Regular.ttf"/>
            </RelativeLayout>
            <View android:background="@color/horizontal_divider_color" android:layout_width="2dp" android:layout_height="@dimen/horizontal_divider_height"/>
            <RelativeLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <TextView android:textSize="@dimen/skin_info_text_size" android:textColor="@color/skin_size_color" android:id="@+id/skin_size_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true"/>
                <TextView android:textSize="@dimen/skin_info_secondary_text_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/size" android:layout_below="@+id/skin_size_count" android:layout_centerHorizontal="true" android:fontFamily="Roboto-Regular.ttf"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="24dp" android:layout_marginRight="24dp" android:layout_below="@+id/info_container" android:id="@+id/lin_last">
            <RelativeLayout android:id="@+id/skin_button_save" android:background="@drawable/background_save_button" android:layout_width="0dp" android:layout_height="@dimen/details_button_height" android:layout_weight="9">
                <ImageView android:layout_width="75dp" android:layout_height="26dp" android:src="@drawable/save_button" android:layout_centerInParent="true"/>
            </RelativeLayout>
            <Space android:layout_width="12dp" android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.yodo1.mas.nativeads.Yodo1MasNativeAdView
            xmlns:masads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/yodo1_mas_native"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/lin_last"
            android:layout_gravity="center_horizontal|top"/>
    </RelativeLayout>


    </ScrollView>
</RelativeLayout>
